[PRMT-816] Added parameters to endpoint swagger.json
